Bugs with Edge Flags and Booleans #40215

Closed
opened 2014-05-15 22:11:49 +02:00 by Vitor Balbio · 17 comments

System Information
Win7 64, GTX 560 ti

Blender Version
30361a7

Short description of error

  1. Bevel Weigth not work if the object have a Boolean Modifier

  2. When you apply a Boolean Modifier Edge flags like Sharpen and Seams (Mark Sharpen, Mark Seams) only are applyied to the final mesh if the Root (the mesh with the modifier ) already have some edge with that flag. if it never has a edge with that flag the final mesh don't apply the flags from the "Mask" object ( the other object of the boolean operation )

Exact steps for others to reproduce the error
1.1) Make a Cube, add a boolean modifier in the stack. point to a object, add a bevel configured with Limit for Weight... Limit does not works. Do the same with Crease and a Subdivision modifier instead Bevel and it works...

  1. Make Two cubes, apply a Boolean modifier in Cube1 and set to Cube2. In Cube2 mark all edges as Sharpen or Crease Apply it. The Sharpen and Crease config will not be in the Result

OBS : Crease Seams to work but i don't have tested to much

Example: Edge_Boolean_Bug.blend

**System Information** Win7 64, GTX 560 ti **Blender Version** 30361a7 **Short description of error** 1) Bevel Weigth not work if the object have a Boolean Modifier 2) When you apply a Boolean Modifier Edge flags like Sharpen and Seams (Mark Sharpen, Mark Seams) only are applyied to the final mesh if the Root (the mesh with the modifier ) already have some edge with that flag. if it never has a edge with that flag the final mesh don't apply the flags from the "Mask" object ( the other object of the boolean operation ) **Exact steps for others to reproduce the error** 1.1) Make a Cube, add a boolean modifier in the stack. point to a object, add a bevel configured with Limit for Weight... Limit does not works. Do the same with Crease and a Subdivision modifier instead Bevel and it works... 2) Make Two cubes, apply a Boolean modifier in Cube1 and set to Cube2. In Cube2 mark all edges as Sharpen or Crease Apply it. The Sharpen and Crease config will not be in the Result OBS : Crease Seams to work but i don't have tested to much Example: [Edge_Boolean_Bug.blend](https://archive.blender.org/developer/F89120/Edge_Boolean_Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @vitorbalbio-3

Added subscriber: @vitorbalbio-3
Sergey Sharybin was assigned by Campbell Barton 2014-05-16 02:57:07 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

It's not a bug in boolean, in fact i'm not sure whether it's bug at all.

The thing is, for until you mark any seam or sharp on mesh it does have "Show Seam|Sharp" disabled. So what's happening is: boolean modifier copies all the data nicely but just edit mode doesn't display anything. If you go to Mesh Display panel and enable display seam|sharp you'll see an expected result.

It could be improved perhaps, but modifier stack doesn't store this flags, so it's not quite possible to enable display seams|sharp based on both operands' settings. So for me it looks like the only thing you might do is to enable the display flags manually..

@ideasman42, other ideas?

It's not a bug in boolean, in fact i'm not sure whether it's bug at all. The thing is, for until you mark any seam or sharp on mesh it does have "Show Seam|Sharp" disabled. So what's happening is: boolean modifier copies all the data nicely but just edit mode doesn't display anything. If you go to Mesh Display panel and enable display seam|sharp you'll see an expected result. It could be improved perhaps, but modifier stack doesn't store this flags, so it's not quite possible to enable display seams|sharp based on both operands' settings. So for me it looks like the only thing you might do is to enable the display flags manually.. @ideasman42, other ideas?

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

So we've talked to Campbell in IRC. And the confusion is coming from Set Seam/Sharp is setting corresponding Display flag, so you don't worry about this. But boolean modifier can't have affect on this setting, even when you apply it. And even if it could, it's still probably not what you want really. Show Seams might have been disabled on purpose and enabling it would confuse..

So we think it's not that case when something is to be really changed in Blender. At least not for supporting this particular case. Improvements are always possible, but here it'll involve some bigger discussion about workflow and trying to find a compromise when blender actually does what you expect..

Thanks for the report, but it's not a bug, just something which might communicate a bit better perhaps.

So we've talked to Campbell in IRC. And the confusion is coming from Set Seam/Sharp is setting corresponding Display flag, so you don't worry about this. But boolean modifier can't have affect on this setting, even when you apply it. And even if it could, it's still probably not what you want really. Show Seams might have been disabled on purpose and enabling it would confuse.. So we think it's not that case when something is to be really changed in Blender. At least not for supporting this particular case. Improvements are always possible, but here it'll involve some bigger discussion about workflow and trying to find a compromise when blender actually does what you expect.. Thanks for the report, but it's not a bug, just something which might communicate a bit better perhaps.
Author

I see it know, i complete forgot about the Show Seams and Show Sharpen flags "per edge". I think you're right on it.

And about the Bevel Weight stuff that i posted in topic (1) "Bevel Weight not works if the object have a Boolean Modifier" ?

I see it know, i complete forgot about the Show Seams and Show Sharpen flags "per edge". I think you're right on it. And about the Bevel Weight stuff that i posted in topic (1) "Bevel Weight not works if the object have a Boolean Modifier" ?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

That's weird indeed. Can't tell anything yet, would need a closer look/

That's weird indeed. Can't tell anything yet, would need a closer look/
Sergey Sharybin removed their assignment 2014-05-19 15:55:47 +02:00
Campbell Barton was assigned by Sergey Sharybin 2014-05-19 15:55:47 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

It's an issue in DM_to_bmesh which doesn't allocate CD_BWEIGHT layer. Boolean modifier sets edge's bweight just nicely ;)

It's an issue in DM_to_bmesh which doesn't allocate CD_BWEIGHT layer. Boolean modifier sets edge's bweight just nicely ;)
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

Just a note: the boolean modifier doesn't copy the Freestyle Edge attribute like Sharp or Seam. I know it stored differently as a separate data array. Maybe the same problem for the bevel weight?

Just a note: the boolean modifier doesn't copy the Freestyle Edge attribute like Sharp or Seam. I know it stored differently as a separate data array. Maybe the same problem for the bevel weight?
Author

There's a patch to fix it already? Or it's more complicated?

There's a patch to fix it already? Or it's more complicated?

This issue was referenced by d27d982657

This issue was referenced by d27d982657b6f544a451b5192f912d36a64eb06b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d27d982657.

Closed by commit d27d982657.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40215
No description provided.