Fix T40215: Boolean looses bevel width